On Linux rework driver_version/vendor extraction from gl version

Previously it could not extract them from the gl version
"3.3 (Core Profile) Mesa 10.5.9" because of the presence
of '(Core Profile)'.

BUG=628929

R=kbr@chromium.org, piman@chromium.org, zmo@chromium.org
CQ_INCLUDE_TRYBOTS=master.tryserver.chromium.linux:linux_optional_gpu_tests_rel;master.tryserver.chromium.mac:mac_optional_gpu_tests_rel;master.tryserver.chromium.win:win_optional_gpu_tests_rel

TEST=gpu_unittests --gtest_filter=*CollectDriverInfoGL*

Committed: https://crrev.com/e5fdc90d17a40a9166a335a0d7c8fd8b2ccf40cd
Review-Url: https://codereview.chromium.org/2153373002
Cr-Original-Commit-Position: refs/heads/master@{#407804}
Cr-Commit-Position: refs/heads/master@{#408604}