gpu/config/gpu_driver_bug_list_json.cc
@@ -20,7 +20,7 @@ const char kGpuDriverBugListJson[] = LONG_STRING_CONST(
 {
   "name": "gpu driver bug list",
   // Please update the version number whenever you change this file.
-  "version": "8.80",
+  "version": "8.81",
   "entries": [
     {
       "id": 1,
@@ -1843,6 +1843,7 @@ LONG_STRING_CONST(
       "os": {
         "type": "linux"
       },
+      "driver_vendor": ".*",
       "exceptions" : [
         {
           "driver_vendor": "Mesa"
